name:                lancelot
version:             0.1.0.0
synopsis:            Your knight in shining ASCII armor
-- description:         
homepage:            https://github.com/begriffs/lancelot
license:             MIT
license-file:        LICENSE
author:              Joe Nelson
maintainer:          cred+github@begriffs.com
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Codec.Binary.Base64
  build-depends:       base >=4.9 && < 5
                     , binary
                     , binary-bits
                     , bytestring
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  default-extensions:  OverloadedStrings, TemplateHaskell
  main-is:             Main.hs
  other-modules:       TestBase64
  hs-source-dirs:      test
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.9 && < 5
                     , bytestring
                     , containers
                     , lancelot
                     , QuickCheck
                     , quickcheck-instances
